--- a/src/main/webapp/WEB-INF/static/html/index.html
+++ b/src/main/webapp/WEB-INF/static/html/index.html
@@ -76,7 +76,8 @@
                     <td>批次</td>
                     <td>数量</td>
                     <td>价格</td>
-                    <td>交期</td>
+                    <td>要求货期</td>
+                    <td>询价日期</td>
                     <td>操作</td>
                 </tr>
                 <tr th:each="Rfq:${pager.datas}">
@@ -88,6 +89,7 @@
                     <td th:text="${Rfq.qty}">500000</td>
                     <td th:text="${Rfq.tp}">11.2563</td>
                     <td th:text="${Rfq.dtime}">深圳现货</td>
+                    <td th:text="${Rfq.rdate}">2019-04-23</td>
                     <td><button type="button" th:value="${Rfq.rfqno}" onclick="inMfg(this.value)">报价</button></td>
                 </tr>
             </table>
