--- a/src/main/webapp/WEB-INF/static/html/quote.html
+++ b/src/main/webapp/WEB-INF/static/html/quote.html
@@ -47,6 +47,7 @@
                     <th>数量</th>
                     <th>目标价</th>
                     <th>要求货期</th>
+                    <th>询价日期</th>
                 </tr>
                 <tr>
                     <td th:value="${rfq.rfqno}">I8090600001</td>
@@ -57,6 +58,7 @@
                     <td th:value="${rfq.qty}" >56850</td>
                     <td th:value="${rfq.tp}">102.56</td>
                     <td th:value="${rfq.dtime}">深圳现货</td>
+                    <td th:value="${rfq.rdate}">报价日期</td>
                 </tr>
             </table>
             <div id="fillQuote">
@@ -64,7 +66,7 @@
                     <table>
                         <tr><th>填写报价单：</th></tr>
                         <tr>
-                            <td><input class="pnL"  type="text" placeholder="询价单号"  /></td>
+                            <td><input class="pnL"  type="text" placeholder="型号"  /></td>
                             <td>
                                 <select class="qltyL" type="text" id="ptypeList">
                                     <option value="原厂代理">原厂代理</option>
@@ -92,7 +94,6 @@
     	<table cellspacing="15px">
             <tr><th colspan="10" style="font-size: 24px">我的报价清单</th></tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                  <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -100,10 +101,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -111,11 +112,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -123,10 +124,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -134,11 +135,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -146,10 +147,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -157,11 +158,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -169,10 +170,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -180,11 +181,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -192,10 +193,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -203,11 +204,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -215,10 +216,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -226,11 +227,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -238,10 +239,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -249,11 +250,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -261,10 +262,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -272,11 +273,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -284,10 +285,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -295,11 +296,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -307,10 +308,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -318,11 +319,11 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
             <tr>
-                <td>询价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6CTR</td>
                 <td>原装正品</td>
@@ -330,10 +331,10 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-18</td>
                 <td colspan="2">深圳市模板电子有限公司</td>
             </tr>
             <tr>
-                <td>报价：</td>
                 <td>I8090600001</td>
                 <td>STM8S903K3T6C</td>
                 <td>原装正品</td>
@@ -341,6 +342,7 @@
                 <td>56850</td>
                 <td>102.56</td>
                 <td>深圳现货</td>
+                <td>2018-12-23</td>
                 <td><a href="">修改</a></td>
                 <td><a href="">删除</a></td>
             </tr>
