--- a/src/main/webapp/WEB-INF/static/html/rfq.html
+++ b/src/main/webapp/WEB-INF/static/html/rfq.html
@@ -90,7 +90,8 @@
                 <th>批次</th>
                 <th>数量</th>
                 <th>单价</th>
-                <th>交期</th>
+                <th>要求货期</th>
+                <th>询价日期</th>
                 <th colspan="2">操作</th>
                 </tr>
                 <tr>
@@ -101,6 +102,7 @@
                    <td>56850</td>
                    <td>102.56</td>
                    <td>深圳现货</td>
+                    <td>2018-12-31</td>
                    <td><a href="">修改</a></td>
                    <td><a href="">删除</a></td>
                 </tr>
@@ -112,6 +114,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -123,6 +126,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -134,6 +138,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -145,6 +150,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -156,6 +162,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -167,6 +174,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -178,6 +186,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -189,6 +198,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -200,6 +210,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -211,6 +222,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -222,6 +234,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -233,6 +246,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -244,6 +258,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -255,6 +270,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -266,6 +282,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -277,6 +294,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -288,6 +306,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -299,6 +318,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -310,6 +330,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
@@ -321,6 +342,7 @@
                     <td>56850</td>
                     <td>102.56</td>
                     <td>深圳现货</td>
+                    <td>2018-12-31</td>
                     <td><a href="">修改</a></td>
                     <td><a href="">删除</a></td>
                 </tr>
